# k8s-hosting-platform

./: .dockerignore  .env.local.example  .gitignore  .local.k8s-rendered.yaml  CLAUDE.md  Makefile  README.md  ROADMAP.md  docker-compose.local.yml  docker-compose.staging.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.test.yml  docker-entrypoint.sh  drizzle.config.ts  eslint.config.js  node_modules  package.json  tsconfig.json  vitest.config.integration.ts  vitest.config.ts
docs/: INFRASTRUCTURE_PLAN.md  QUICKSTART.md  README.md  REORGANIZATION_INSTRUCTIONS.md
e2e/: admin-admin-users.spec.ts  admin-applications.spec.ts  admin-backup-settings.spec.ts  admin-client-databases.spec.ts  admin-client-detail.spec.ts  admin-cron-jobs.spec.ts  admin-crud-operations.spec.ts  admin-domains.spec.ts  admin-email.spec.ts  admin-forms.spec.ts  admin-full-workflow.spec.ts  admin-health.spec.ts  admin-mail-blob-store.spec.ts  admin-mail-settings.spec.ts  admin-mail-storage.spec.ts  admin-monitoring.spec.ts  admin-panel-audit-logs.spec.ts  admin-panel-client-users.spec.ts  admin-plan-management.spec.ts  admin-security.spec.ts  admin-settings.spec.ts  admin-smoke.spec.ts  admin-storage.spec.ts  admin-workloads.spec.ts  auth.setup.ts  client-panel-applications.spec.ts  client-panel-backups.spec.ts  client-panel-database-crud.spec.ts  client-panel-email.spec.ts  client-panel-full-workflow.spec.ts  client-panel-notifications.spec.ts  client-panel-sftp.spec.ts  client-panel-smoke.spec.ts  client-panel-sub-users.spec.ts  helpers.ts
frontend/: docker-entrypoint.sh
images/rocksdb-secondary-checkpoint/: Cargo.toml  Dockerfile
images/rocksdb-secondary-checkpoint/src/: main.rs
scripts/: admin-domain-rewrite.sh  admin-password-reset.sh  apply-backup-labels.sh  auth-e2e-staging.sh  backfill-tenant-namespace-pss.sh  bootstrap.sh  check-nginx-ingress-drift.sh  ci-admin-auth-check.sh  ci-backup-rclone-shim-check.sh  ci-backups-v2-schema-audit.sh  ci-empty-cluster-issuer-check.sh  ci-firewall-check.sh  ci-flux-envsubst-check.sh  ci-flux-escape-check.sh  ci-job-ttl-check.sh  ci-k8s-patch-check.sh  ci-mail-arch-regressions.sh  ci-mail-pg-removal-check.sh  ci-mail-sdk-shape.sh  ci-modsec-exclusion-check.sh  ci-nginx-real-ip-check.sh  ci-no-dex-in-production.sh  ci-no-hardcoded-ips.sh  ci-no-leaked-test-tenants.sh  ci-no-longhorn-in-mail.sh  ci-no-pinned-domains.sh  ci-no-secret-in-argv.sh  ci-node-terminal-check.sh  (+91 more)
(+2150 files in other folders)
